<resources>
    <string name="app_name">Portfolio</string>
    <string name="app_1">SPOTIFY STREAMER</string>
    <string name="app_2">SCORES APP</string>
    <string name="app_3">LIBRARY APP</string>
    <string name="app_4">BUILD IT BIGGER</string>
    <string name="app_5">XYZ READER</string>
    <string name="app_6">CAPSTONE: MY OWN APP</string>
    <string name="title">My NanoDegree Apps</string>
</resources>
